# CrawlerC_MPI

./: CMakeCache.txt  CMakeLists.txt  CrawlerSequencial  Crawler_MPI  Crawler_MPI.cpp  Makefile  README.md  cmake_install.cmake  crawler_mpi2  crawler_mpi2.cpp  crawler_url_da_listagem_por_categoria_sequencial.cpp  hosts  mycurlfile_parallel.txt  sequencial  t3.cpp
